ecmascript/parser/tests/test262-error-references/fail/e52f002f70dc01b2.js.stderr
error: Rest element must be final element
 --> $DIR/tests/test262-parser/fail/e52f002f70dc01b2.js:1:5
  |
1 | (...a, b) => {}
  |     ^

